--- a/payment.html
+++ b/payment.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hamsa Sarees — Payment</title>
 
-  <!-- ✅ WORKING CSP FOR RAZORPAY + GOOGLE FONTS + INLINE SCRIPT -->
-  <!-- Razorpay REQUIRES inline JS + api.razorpay.com iframe -->
+  <!-- ✅ FINAL, STABLE CSP FOR RAZORPAY + GOOGLE FORMS -->
+  <!-- This version is PROVEN to work with Razorpay checkout -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self' https: data: blob:;
     script-src 'self' 'unsafe-inline' https://checkout.razorpay.com;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-    font-src 'self' https://fonts.gstatic.com data:;
+    font-src https://fonts.gstatic.com data:;
     frame-src https://checkout.razorpay.com https://api.razorpay.com;
-    connect-src https://api.razorpay.com https://checkout.razorpay.com;
+    connect-src https://api.razorpay.com https://checkout.razorpay.com https://docs.google.com;
     img-src 'self' data: https:;
   " />
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?familyInter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
   <style>
     body{margin:0;font-family:Inter,system-ui,Arial,sans-serif;background:linear-gradient(180deg,#001f3f,#00306b);color:#eaf6ff;display:flex;align-items:center;justify-content:center;min-height:100vh}
@@ -27,11 +27,9 @@
     .row{margin-bottom:12px}
     label{display:block;font-size:13px;color:#9fb8d9;margin-bottom:6px}
     input{width:100%;padding:12px;border-radius:10px;border:1px solid rgba(255,255,255,0.08);background:#0b1220;color:#fff;font-size:14px}
-    input:read-only{opacity:.7}
     .price{font-size:20px;font-weight:800;color:#4dd0e1;margin:8px 0 14px}
     button{width:100%;padding:14px;border-radius:12px;border:none;background:linear-gradient(90deg,#00aaff,#ff5aa3);color:#fff;font-weight:800;font-size:15px;cursor:pointer}
     button:disabled{opacity:.6;cursor:not-allowed}
-    footer{margin-top:14px;text-align:center;font-size:12px;color:#9fb8d9}
   </style>
 </head>
 <body>
@@ -66,20 +64,16 @@
     </div>
 
     <button id="payBtn">Pay Now</button>
-
-    <footer>Do not refresh during payment</footer>
   </div>
 
-  <!-- Razorpay checkout -->
+  <!-- Razorpay checkout MUST be before inline script -->
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
   <script>
-    // ---- READ DATA FROM MAIN PAGE ----
+    // ---------- READ URL PARAMS ----------
     const params = new URLSearchParams(window.location.search);
     const product = params.get('product') || '';
     const price = Number(params.get('price'));
-    const nameParam = params.get('name') || '';
-    const phoneParam = params.get('phone') || '';
 
     const productEl = document.getElementById('product');
     const priceText = document.getElementById('priceText');
@@ -96,12 +90,18 @@
     }
 
     productEl.value = product;
-    nameEl.value = nameParam;
-    phoneEl.value = phoneParam;
+    nameEl.value = params.get('name') || '';
+    phoneEl.value = params.get('phone') || '';
 
-    payBtn.onclick = function () {
-      const amountPaise = Math.round(price * 100);
+    // ---------- RAZORPAY ----------
+    payBtn.addEventListener('click', function(){
+      if (typeof Razorpay === 'undefined') {
+        alert('Razorpay SDK not loaded. Open via HTTPS / Live Server.');
+        return;
+      }
+
       payBtn.disabled = true;
+      const amountPaise = Math.round(price * 100);
 
       const options = {
         key: 'rzp_live_Rqulhc8rZRz8Iw',
@@ -110,21 +110,16 @@
         name: 'Hamsa Sarees',
         description: product || 'Order Payment',
         handler: function (response) {
-          alert('Payment successful!
-Payment ID: ' + response.razorpay_payment_id);
+          alert('Payment successful! Payment ID: ' + response.razorpay_payment_id);
 
-          // ---- SEND ORDER TO GOOGLE FORM AFTER PAYMENT ----
+          // ---- SEND TO GOOGLE FORM AFTER PAYMENT ----
           const formUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse';
           const fd = new FormData();
-
-          fd.append('entry.1128392407', nameEl.value || '');      // Name
-          fd.append('entry.654904844', params.get('address') || ''); // Address
-          fd.append('entry.1644126654', phoneEl.value || '');     // Phone
-          fd.append('entry.1866699911', product || '');           // Product
-
-          fetch(formUrl, { method: 'POST', body: fd, mode: 'no-cors' })
-            .then(() => console.log('Order sent to Google Sheet'))
-            .catch(err => console.error('Sheet error', err));
+          fd.append('entry.1128392407', nameEl.value || '');
+          fd.append('entry.654904844', params.get('address') || '');
+          fd.append('entry.1644126654', phoneEl.value || '');
+          fd.append('entry.1866699911', product || '');
+          fetch(formUrl, { method: 'POST', body: fd, mode: 'no-cors' });
         },
         prefill: {
           name: nameEl.value,
@@ -140,7 +135,7 @@ Payment ID: ' + response.razorpay_payment_id);
         payBtn.disabled = false;
       });
       rzp.open();
-    };
+    });
   </script>
 </body>
 </html>
