--- a/payment.html
+++ b/payment.html
@@ -17,20 +17,10 @@
     img-src 'self' data: https:;
   " />
 
-  <link href="https://fonts.googleapis.com/css2?familyInter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-
-  <style>
-    body{margin:0;font-family:Inter,system-ui,Arial,sans-serif;background:linear-gradient(180deg,#001f3f,#00306b);color:#eaf6ff;display:flex;align-items:center;justify-content:center;min-height:100vh}
-    .card{background:linear-gradient(180deg,#071522,#06121a);border-radius:14px;padding:24px;max-width:420px;width:100%;box-shadow:0 20px 60px rgba(0,0,0,.45);border:1px solid rgba(255,255,255,0.05)}
-    h1{margin:0 0 6px;font-size:22px;font-weight:800}
-    .small{color:#9fb8d9;font-size:14px;margin-bottom:14px}
-    .row{margin-bottom:12px}
-    label{display:block;font-size:13px;color:#9fb8d9;margin-bottom:6px}
-    input{width:100%;padding:12px;border-radius:10px;border:1px solid rgba(255,255,255,0.08);background:#0b1220;color:#fff;font-size:14px}
-    .price{font-size:20px;font-weight:800;color:#4dd0e1;margin:8px 0 14px}
-    button{width:100%;padding:14px;border-radius:12px;border:none;background:linear-gradient(90deg,#00aaff,#ff5aa3);color:#fff;font-weight:800;font-size:15px;cursor:pointer}
-    button:disabled{opacity:.6;cursor:not-allowed}
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
