--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
 <div class="toast" id="toast">Done</div>
 
 <script src="firebase-config.js"></script>
-<script type="module">
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
+<script>
     (async function() {
         if (document.readyState === 'loading') {
             await new Promise(r => document.addEventListener('DOMContentLoaded', r));
@@ -95,9 +98,9 @@
         }
 
         try {
-            const { initializeApp } = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js');
-            const { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js');
-            const { getFirestore, collection, getDocs } = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js');
+            const { initializeApp } = firebase.app;
+            const { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } = firebase.auth;
+            const { getFirestore, collection, getDocs } = firebase.firestore;
 
             const app = initializeApp(window.firebaseConfig);
             const auth = getAuth(app);
