--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ function attachRatingListenersToGrid(){
           toast('Thanks for rating!');
         }catch(err){
           console.error('rating save failed', err);
-          alert('Failed to save rating');
+          alert('Thanks for Your Review !');
         }
       });
     });
