--- a/index.html
+++ b/index.html
@@ -464,9 +464,18 @@ function attachRatingListenersToGrid(){
       if(!/^[6-9]\d{9}$/.test(phone)){ alert('Enter a valid 10-digit Indian mobile number'); return; }
       closeModal(orderModal);
       // Redirect to payment page with order details as URL parameters
-      const params = new URLSearchParams({ product, name, address, phone, price });
-      window.location.href = `payment.html?${params.toString()}`;
-    });
+     const tempOrder = {
+  product,
+  name,
+  address,
+  phone,
+  price,
+  ts: Date.now()
+};
+
+sessionStorage.setItem('pendingOrder', JSON.stringify(tempOrder));
+window.location.href = 'payments.html';
+
 
     // Load user orders (persistent) and allow delete + view
     // Moved to yourorders.html as a separate page
