--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ function attachRatingListenersToGrid(){
 };
 
 sessionStorage.setItem('pendingOrder', JSON.stringify(tempOrder));
-window.location.href = 'payments.html';});
+window.location.href = 'payment.html';});
 
 
 
