--- a/payment.html
+++ b/payment.html
@@ -13,12 +13,7 @@
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     font-src https://fonts.gstatic.com data:;
     frame-src https://checkout.razorpay.com https://api.razorpay.com;
-    connect-src
-  https://api.razorpay.com
-  https://checkout.razorpay.com
-  https://docs.google.com
-  https://firestore.googleapis.com
-  https://identitytoolkit.googleapis.com;
+   connect-src https://api.razorpay.com https://checkout.razorpay.com https://docs.google.com https://firestore.googleapis.com https://identitytoolkit.googleapis.com;
 
     img-src 'self' data: https:;
   " />
@@ -92,6 +87,9 @@ const order = JSON.parse(rawOrder);
     const phoneEl = document.getElementById('phone');
     const emailEl = document.getElementById('email');
     const payBtn = document.getElementById('payBtn');
+const order = JSON.parse(rawOrder);
+const price = Number(order.price);
+const product = order.product;
 
     if (!price || isNaN(price) || price <= 0) {
       alert('Invalid payment link. Please place order again.');
@@ -99,25 +97,24 @@ const order = JSON.parse(rawOrder);
     } else {
       priceText.innerText = '₹' + price;
     }
-const price = Number(order.price);
-const product = order.product;
+
 
 productEl.value = order.product;
 priceText.innerText = '₹' + order.price;
 nameEl.value = order.name;
 phoneEl.value = order.phone;
-
+  </script>
     // ---------- RAZORPAY ----------
     <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-const firebaseConfig = {
+const firebaseConfig = ({
   apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
   authDomain: "hamsasarees-24738.firebaseapp.com",
   projectId: "hamsasarees-24738"
-};
+});
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
@@ -132,6 +129,11 @@ onAuthStateChanged(auth, user => {
   }
   currentUser = user;
 });
+    // expose for non-module script
+  window.db = db;
+  window.setDoc = setDoc;
+  window.doc = doc;
+  window.serverTimestamp = serverTimestamp;
 </script>
 <script>
 payBtn.addEventListener('click', function () {
