--- a/payment.html
+++ b/payment.html
@@ -5,20 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hamsa Sarees — Payment</title>
 
-  <!-- ✅ FINAL, STABLE CSP FOR RAZORPAY + GOOGLE FORMS -->
-  <!-- This version is PROVEN to work with Razorpay checkout -->
+  <!-- ✅ UPDATED CSP FOR RAZORPAY + GOOGLE FORMS + FIREBASE -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self' https: data: blob:;
-    script-src 'self' 'unsafe-inline' https://checkout.razorpay.com;
+    script-src 'self' 'unsafe-inline' https://checkout.razorpay.com https://www.gstatic.com;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     font-src https://fonts.gstatic.com data:;
     frame-src https://checkout.razorpay.com https://api.razorpay.com;
-   connect-src https://api.razorpay.com https://checkout.razorpay.com https://docs.google.com https://firestore.googleapis.com https://identitytoolkit.googleapis.com;
-
+    connect-src https://api.razorpay.com https://checkout.razorpay.com https://docs.google.com https://firestore.googleapis.com https://identitytoolkit.googleapis.com;
     img-src 'self' data: https:;
   " />
 
-  <link href="https://fonts.googleapis.com/css2?familyInter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
   <style>
     body{margin:0;font-family:Inter,system-ui,Arial,sans-serif;background:linear-gradient(180deg,#001f3f,#00306b);color:#eaf6ff;display:flex;align-items:center;justify-content:center;min-height:100vh}
@@ -51,7 +49,7 @@
 
     <div class="row">
       <label>Your Name</label>
-      <input id="name" />
+      <input id="name" required />
     </div>
 
     <div class="row">
@@ -61,10 +59,10 @@
 
     <div class="row">
       <label>Phone</label>
-      <input id="phone" />
+      <input id="phone" required />
     </div>
 
-    <button id="payBtn">Pay Now</button>
+    <button id="payBtn" disabled>Pay Now</button>
   </div>
 
   <!-- Razorpay checkout MUST be before inline script -->
@@ -72,14 +70,23 @@
 
   <script>
     // ---------- READ URL PARAMS ----------
-   const rawOrder = sessionStorage.getItem('pendingOrder');
+    const rawOrder = sessionStorage.getItem('pendingOrder');
 
-if (!rawOrder) {
-  alert('Invalid access. Please place order again.');
-  window.location.href = 'index.html';
-}
+    if (!rawOrder) {
+      alert('Invalid access. Please place order again.');
+      window.location.href = 'index.html';
+    }
 
-const order = JSON.parse(rawOrder);
+    let order;
+    try {
+      order = JSON.parse(rawOrder);
+    } catch (e) {
+      alert('Invalid order data. Please place order again.');
+      window.location.href = 'index.html';
+    }
+
+    const price = Number(order.price);
+    const product = order.product;
 
     const productEl = document.getElementById('product');
     const priceText = document.getElementById('priceText');
@@ -87,125 +94,132 @@ const order = JSON.parse(rawOrder);
     const phoneEl = document.getElementById('phone');
     const emailEl = document.getElementById('email');
     const payBtn = document.getElementById('payBtn');
-const order = JSON.parse(rawOrder);
-const price = Number(order.price);
-const product = order.product;
 
     if (!price || isNaN(price) || price <= 0) {
       alert('Invalid payment link. Please place order again.');
       payBtn.disabled = true;
     } else {
       priceText.innerText = '₹' + price;
+      productEl.value = product;
+      nameEl.value = order.name || '';
+      phoneEl.value = order.phone || '';
     }
-
-
-productEl.value = order.product;
-priceText.innerText = '₹' + order.price;
-nameEl.value = order.name;
-phoneEl.value = order.phone;
   </script>
 
-    <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+    import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-const firebaseConfig = ({
-  apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
-  authDomain: "hamsasarees-24738.firebaseapp.com",
-  projectId: "hamsasarees-24738"
-});
+    const firebaseConfig = {
+      apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
+      authDomain: "hamsasarees-24738.firebaseapp.com",
+      projectId: "hamsasarees-24738"
+    };
 
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-const db = getFirestore(app);
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
 
-let currentUser = null;
+    let currentUser = null;
 
-onAuthStateChanged(auth, user => {
-  if (!user) {
-    alert('Please sign in first');
-    window.location.href = 'index.html';
-  }
-  currentUser = user;
-});
-    // expose for non-module script
-  window.db = db;
-  window.setDoc = setDoc;
-  window.doc = doc;
-  window.serverTimestamp = serverTimestamp;
-</script>
-<script>
-payBtn.addEventListener('click', function () {
-  if (typeof Razorpay === 'undefined') {
-    alert('Razorpay SDK not loaded. Open via HTTPS / Live Server.');
-    return;
-  }
+    onAuthStateChanged(auth, user => {
+      if (!user) {
+        alert('Please sign in first');
+        window.location.href = 'index.html';
+      } else {
+        currentUser = user;
+        payBtn.disabled = false;
+      }
+    });
 
-  payBtn.disabled = true;
-  const amountPaise = Math.round(price * 100);
+    window.db = db;
+    window.setDoc = setDoc;
+    window.doc = doc;
+    window.serverTimestamp = serverTimestamp;
+  </script>
 
-  const options = {
-    key: 'rzp_live_Rqulhc8rZRz8Iw',
-    amount: amountPaise,
-    currency: 'INR',
-    name: 'Hamsa Sarees',
-    description: product || 'Order Payment',
+  <script>
+    payBtn.addEventListener('click', async function () {
+      if (!window.Razorpay) {
+        alert('Razorpay SDK not loaded. Open via HTTPS / Live Server.');
+        return;
+      }
 
-    handler: async function (response) {
-      const orderId = crypto.randomUUID();
+      if (!currentUser) {
+        alert('Authentication in progress. Please wait.');
+        return;
+      }
 
-      // 🔹 SAVE TO FIRESTORE
-      await setDoc(
-        doc(db, 'users', currentUser.uid, 'orders', orderId),
-        {
-          product: order.product,
-          price: order.price,
-          name: order.name,
-          phone: order.phone,
-          address: order.address,
-          paymentId: response.razorpay_payment_id,
-          status: 'PAID',
-          createdAt: serverTimestamp()
-        }
-      );
+      payBtn.disabled = true;
+      payBtn.textContent = 'Processing...';
 
-      // 🔹 SEND TO GOOGLE FORM
-      const formUrl =
-        'https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse';
+      const amountPaise = Math.round(price * 100);
 
-      const fd = new FormData();
-      fd.append('entry.1128392407', order.name);
-      fd.append('entry.654904844', order.address);
-      fd.append('entry.1644126654', order.phone);
-      fd.append('entry.1866699911', order.product);
+      const options = {
+        key: 'rzp_live_Rqulhc8rZRz8Iw',
+        amount: amountPaise,
+        currency: 'INR',
+        name: 'Hamsa Sarees',
+        description: product || 'Order Payment',
 
-      fetch(formUrl, { method: 'POST', body: fd, mode: 'no-cors' });
+        handler: async function (response) {
+          const orderId = crypto.randomUUID();
 
-      sessionStorage.removeItem('pendingOrder');
-      alert('Payment successful!');
-      window.location.href = 'yourorders.html';
-    },
+          try {
+            await setDoc(
+              doc(db, 'users', currentUser.uid, 'orders', orderId),
+              {
+                product: product,
+                price: price,
+                name: nameEl.value,
+                phone: phoneEl.value,
+                email: emailEl.value,
+                address: order.address,
+                paymentId: response.razorpay_payment_id,
+                status: 'PAID',
+                createdAt: serverTimestamp()
+              }
+            );
 
-    prefill: {
-      name: nameEl.value,
-      email: emailEl.value,
-      contact: phoneEl.value
-    },
+            const formUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse';
+            const fd = new FormData();
+            fd.append('entry.1128392407', nameEl.value);
+            fd.append('entry.654904844', order.address);
+            fd.append('entry.1644126654', phoneEl.value);
+            fd.append('entry.1866699911', product);
 
-    theme: { color: '#00aaff' }
-  };
+            fetch(formUrl, { method: 'POST', body: fd, mode: 'no-cors' });
 
-  const rzp = new Razorpay(options);
+            sessionStorage.removeItem('pendingOrder');
+            alert('Payment successful!');
+            window.location.href = 'yourorders.html';
+          } catch (error) {
+            alert('Error saving order: ' + error.message);
+            payBtn.disabled = false;
+            payBtn.textContent = 'Pay Now';
+          }
+        },
 
-  rzp.on('payment.failed', function (resp) {
-    alert('Payment failed: ' + resp.error.description);
-    payBtn.disabled = false;
-  });
+        prefill: {
+          name: nameEl.value,
+          email: emailEl.value,
+          contact: phoneEl.value
+        },
 
-  rzp.open();
-});
-  
+        theme: { color: '#00aaff' }
+      };
+
+      const rzp = new Razorpay(options);
+
+      rzp.on('payment.failed', function (resp) {
+        alert('Payment failed: ' + resp.error.description);
+        payBtn.disabled = false;
+        payBtn.textContent = 'Pay Now';
+      });
+
+      rzp.open();
+    });
   </script>
 </body>
 </html>
