--- a/payment.html
+++ b/payment.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hamsa Sarees — Payment</title>
 
-  <!-- ✅ UPDATED CSP FOR RAZORPAY + GOOGLE FORMS + FIREBASE -->
+  <!-- ✅ UPDATED CSP FOR RAZORPAY + GOOGLE FORMS + FIREBASE (INCLUDES SOURCE MAPS) -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self' https: data: blob:;
     script-src 'self' 'unsafe-inline' https://checkout.razorpay.com https://www.gstatic.com;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     font-src https://fonts.gstatic.com data:;
     frame-src https://checkout.razorpay.com https://api.razorpay.com;
-    connect-src https://api.razorpay.com https://checkout.razorpay.com https://docs.google.com https://firestore.googleapis.com https://identitytoolkit.googleapis.com;
+    connect-src https://api.razorpay.com https://checkout.razorpay.com https://docs.google.com https://firestore.googleapis.com https://identitytoolkit.googleapis.com https://www.gstatic.com;
     img-src 'self' data: https:;
   " />
 
