--- a/index.html
+++ b/index.html
@@ -7,67 +7,245 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   
 
-  <style>
-    :root{
-      --bg1:#001f3f; --bg2:#00306b; --accent:#00aaff; --accent2:#4dd0e1; --muted:#9fb8d9; --success:#10b981;
-      --card:#071522; --glass:rgba(255,255,255,0.03); --danger:#ff3b3b;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%;margin:0;font-family:Inter,system-ui,Arial,sans-serif;background:linear-gradient(180deg,var(--bg1),var(--bg2));color:#eaf6ff;-webkit-font-smoothing:antialiased}
-    a{color:inherit;text-decoration:none}
-    .container{max-width:1100px;margin:20px auto;padding:0 16px}
-    header{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:12px;margin-bottom:20px;background:rgba(255,255,255,0.01);border-radius:12px}
-    .brand{display:flex;gap:12px;align-items:center}
-    .logo{width:44px;height:44px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent2));display:flex;align-items:center;justify-content:center;font-weight:800;color:#032033;box-shadow:0 12px 40px rgba(0,170,255,0.12)}
-    .title{font-weight:800;font-size:18px;line-height:1.2}
-    .small{color:var(--muted);font-size:14px}
-    .search{flex:1;display:flex;align-items:center;gap:8px;padding:10px 12px;background:rgba(255,255,255,0.03);border-radius:10px;border:1px solid rgba(255,255,255,0.06)}
-    .search input{flex:1;background:transparent;border:none;color:#dbeafe;outline:none;font-size:14px}
-    .search input::placeholder{color:var(--muted)}
-    .actions{display:flex;gap:8px;align-items:center}
-    .btn{cursor:pointer;border-radius:10px;padding:9px 14px;border:none;font-weight:700;background:linear-gradient(90deg,var(--accent),#ff5aa3);color:#fff;box-shadow:0 8px 24px rgba(0,170,255,0.12);transition:transform .15s,filter .15s;display:inline-flex;align-items:center;justify-content:center}
-    .btn:active{transform:translateY(1px)}
-    .btn:disabled{opacity:0.6;cursor:not-allowed}
-    .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:#fff;padding:8px 12px;border-radius:10px;cursor:pointer;font-weight:600;transition:background .2s}
-    .btn-ghost:hover{background:rgba(255,255,255,0.05)}
-    .hero{gap:16px;display:flex;flex-direction:column}
-    .hero-card{background:linear-gradient(180deg,#071522,#06121a);padding:20px;border-radius:12px;border:1px solid rgba(255,255,255,0.03)}
-    .hero-card h1{margin:0 0 8px 0;font-size:28px;line-height:1.3}
-    .hero-card p{margin:0 0 14px 0}
-    .promo{background:linear-gradient(180deg,rgba(0,170,255,0.1),rgba(77,208,225,0.05));padding:16px;border-radius:10px;border:1px solid rgba(0,170,255,0.2);text-align:center}
-    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(200px,1fr));gap:16px;margin-top:16px}
-    .card{background:linear-gradient(180deg,#071522,#06121a);border-radius:12px;overflow:hidden;border:1px solid rgba(255,255,255,0.03);transition:transform .2s,box-shadow .2s}
-    .card:hover{transform:translateY(-4px);box-shadow:0 16px 40px rgba(0,170,255,0.15)}
-    .tag{position:absolute;top:8px;right:8px;background:linear-gradient(90deg,var(--accent),#ff5aa3);padding:4px 10px;border-radius:6px;font-size:12px;font-weight:700;color:#fff;z-index:10}
-    .imgwrap{position:relative;overflow:hidden;padding-bottom:100%;background:rgba(255,255,255,0.02)}
-    .imgwrap img{position:absolute;inset:0;width:100%;height:100%;object-fit:cover}
-    .card h3{margin:12px;font-size:16px;line-height:1.3}
-    .price{font-weight:800;color:var(--accent2);font-size:16px}
-    .product-rating{font-size:13px;color:var(--success)}
-    .rating-ui{display:flex;gap:4px}
-    .rateBtn{padding:4px 6px;font-size:12px;border-radius:6px;border:none;cursor:pointer;background:transparent;border:1px solid rgba(255,255,255,0.1);color:var(--muted);transition:all .2s}
-    .rateBtn:hover{background:rgba(0,170,255,0.2);color:var(--accent)}
-    .field{display:flex;flex-direction:column;margin-bottom:16px}
-    .field label{font-weight:600;margin-bottom:8px;color:#eaf6ff;font-size:14px}
-    .field input,.field select,.field textarea{padding:12px;border-radius:10px;border:none;background:rgba(8,18,26,0.8);color:#dbeafe;font-size:14px;border:1px solid rgba(255,255,255,0.06);transition:border-color .2s}
-    .field input:focus,.field select:focus,.field textarea:focus{outline:none;border-color:var(--accent);box-shadow:0 0 8px rgba(0,170,255,0.2)}
-    .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:linear-gradient(180deg,rgba(3,8,20,0.6),rgba(2,8,18,0.85));z-index:1200;padding:12px}
-    .modal.show{display:flex}
-    .modal-box{max-width:720px;width:100%;background:linear-gradient(180deg,#071522,#06121a);border-radius:12px;padding:20px;color:#eaf6ff;position:relative;box-shadow:0 30px 80px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.03);max-height:90vh;overflow-y:auto}
-    .modal-box h2{margin-top:0;margin-bottom:12px;font-size:22px}
-    .close-x{position:absolute;top:12px;right:12px;background:none;border:none;color:#ff5aa3;font-weight:800;font-size:18px;cursor:pointer;transition:transform .2s}
-    .close-x:hover{transform:scale(1.2)}
-    .sr-only{position:absolute!important;height:1px;width:1px;overflow:hidden;clip:rect(1px,1px,1px,1px);white-space:nowrap}
-    button:focus,input:focus,select:focus,textarea:focus{outline:3px solid rgba(0,170,255,0.12);outline-offset:2px}
-    .toast{position:fixed;right:16px;bottom:16px;background:#0b1220;padding:12px 16px;border-radius:10px;color:#d1fae5;border-left:4px solid var(--success);box-shadow:0 8px 30px rgba(2,6,23,0.6);display:none;z-index:2000;font-weight:600}
-    @media (max-width:640px){
-      header{flex-direction:column;align-items:stretch;padding:12px 16px}
-      .actions{flex-wrap:wrap}
-      .grid{grid-template-columns:repeat(auto-fill,minmax(160px,1fr))}
-      .card h3{font-size:14px;margin:10px}
-      .hero-card h1{font-size:24px}
-    }
-  </style>
+<style>
+:root{
+  --bg1:#020b18;
+  --bg2:#041a33;
+
+  --card:#071b2f;
+  --glass:rgba(255,255,255,0.04);
+
+  --accent:#3fbfff;
+  --accent2:#7dd3fc;
+
+  --muted:#a9c2dd;
+  --success:#22c55e;
+  --danger:#ff4d4d;
+}
+
+*{box-sizing:border-box}
+
+html,body{
+  height:100%;
+  margin:0;
+  font-family:Inter,system-ui,Arial,sans-serif;
+  background:linear-gradient(180deg,var(--bg1),var(--bg2));
+  color:#eaf4ff;
+}
+
+.container{
+  max-width:1200px;
+  margin:24px auto;
+  padding:0 16px;
+}
+
+/* HEADER */
+header{
+  display:flex;
+  gap:16px;
+  align-items:center;
+  justify-content:space-between;
+  padding:16px 18px;
+  border-radius:16px;
+  background:rgba(255,255,255,0.03);
+  backdrop-filter: blur(10px);
+}
+
+.brand{
+  display:flex;
+  gap:14px;
+  align-items:center;
+}
+
+.logo{
+  width:48px;
+  height:48px;
+  border-radius:14px;
+  background:linear-gradient(135deg,var(--accent),var(--accent2));
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-weight:800;
+  color:#04223f;
+}
+
+.title{
+  font-weight:800;
+  font-size:18px;
+}
+
+.small{
+  font-size:13px;
+  color:var(--muted);
+}
+
+/* SEARCH */
+.search{
+  flex:1;
+  max-width:420px;
+  display:flex;
+  align-items:center;
+  gap:10px;
+  padding:10px 14px;
+  border-radius:14px;
+  background:rgba(255,255,255,0.05);
+  border:1px solid rgba(255,255,255,0.08);
+}
+
+.search input{
+  flex:1;
+  background:none;
+  border:none;
+  outline:none;
+  color:#eaf4ff;
+}
+
+/* BUTTONS */
+.btn{
+  border:none;
+  padding:10px 18px;
+  border-radius:14px;
+  font-weight:700;
+  cursor:pointer;
+  background:linear-gradient(90deg,var(--accent),var(--accent2));
+  color:#04223f;
+}
+
+.btn-ghost{
+  background:transparent;
+  border:1px solid rgba(255,255,255,0.15);
+  padding:9px 16px;
+  border-radius:14px;
+  color:#eaf4ff;
+  cursor:pointer;
+}
+
+/* HERO */
+.hero{
+  display:grid;
+  grid-template-columns:1.3fr .7fr;
+  gap:18px;
+  margin-top:20px;
+}
+
+.hero-card{
+  padding:28px;
+  border-radius:20px;
+  background:linear-gradient(180deg,#071f36,#05172a);
+}
+
+.hero-card h1{
+  font-size:30px;
+  margin:0 0 10px 0;
+}
+
+.promo{
+  border-radius:20px;
+  padding:22px;
+  background:linear-gradient(180deg,rgba(63,191,255,0.15),rgba(125,211,252,0.05));
+  border:1px solid rgba(63,191,255,0.25);
+  text-align:center;
+}
+
+/* PRODUCT GRID */
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fill,minmax(220px,1fr));
+  gap:18px;
+  margin-top:18px;
+}
+
+.card{
+  background:linear-gradient(180deg,#071f36,#05172a);
+  border-radius:18px;
+  padding-bottom:14px;
+  transition:.25s ease;
+}
+
+.card:hover{
+  transform:translateY(-6px);
+}
+
+/* IMAGE */
+.imgwrap{
+  position:relative;
+  padding-bottom:120%;
+  border-radius:18px 18px 0 0;
+  overflow:hidden;
+}
+
+.imgwrap img{
+  position:absolute;
+  inset:0;
+  width:100%;
+  height:100%;
+  object-fit:cover;
+}
+
+/* TAG */
+.tag{
+  position:absolute;
+  top:12px;
+  left:12px;
+  padding:4px 12px;
+  font-size:12px;
+  border-radius:20px;
+  background:linear-gradient(90deg,var(--accent),var(--accent2));
+  color:#04223f;
+  font-weight:700;
+}
+
+/* PRODUCT TEXT */
+.card h3{
+  margin:14px;
+  font-size:16px;
+}
+
+.price{
+  font-weight:800;
+  color:#7dd3fc;
+}
+
+.product-rating{
+  font-size:13px;
+  color:var(--success);
+}
+
+/* MODALS */
+.modal{
+  position:fixed;
+  inset:0;
+  display:none;
+  align-items:center;
+  justify-content:center;
+  background:rgba(2,8,20,0.85);
+  z-index:2000;
+}
+
+.modal.show{display:flex}
+
+.modal-box{
+  width:100%;
+  max-width:720px;
+  max-height:90vh;
+  overflow:auto;
+  background:linear-gradient(180deg,#071f36,#05172a);
+  border-radius:20px;
+  padding:24px;
+}
+
+/* MOBILE */
+@media(max-width:768px){
+  .hero{
+    grid-template-columns:1fr;
+  }
+  header{
+    flex-direction:column;
+    align-items:stretch;
+  }
+}
+</style>
+
 </head>
 <body>
   <div class="container">
